reolved the bug that made contact section overlapping into the about section

--- a/style.css
+++ b/style.css
@@ -246,7 +246,6 @@
     align-items: center;
     padding: 114px 24px;
     gap: 24px;
-    position: absolute;
     width: 375px;
     height: 1062.15px;
     top: 3506px;
